// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useOperatingSystemFilter with operating systems loaded should match snapshot 1`] = `
Array [
  Object {
    "filterValues": Object {
      "groups": Array [
        Object {
          "groupSelectable": true,
          "items": Array [
            Object {
              "label": "RHEL 9.0",
              "type": "checkbox",
              "value": "9.0",
            },
          ],
          "label": "RHEL 9",
          "type": "checkbox",
          "value": "9",
        },
        Object {
          "groupSelectable": true,
          "items": Array [
            Object {
              "label": "RHEL 8.4",
              "type": "checkbox",
              "value": "8.4",
            },
            Object {
              "label": "RHEL 8.3",
              "type": "checkbox",
              "value": "8.3",
            },
            Object {
              "label": "RHEL 8.0",
              "type": "checkbox",
              "value": "8.0",
            },
          ],
          "label": "RHEL 8",
          "type": "checkbox",
          "value": "8",
        },
      ],
      "onChange": [Function],
      "selected": Object {
        "8": Object {
          "8": false,
          "8.0": false,
          "8.3": false,
          "8.4": false,
        },
        "9": Object {
          "9": false,
          "9.0": false,
        },
      },
    },
    "label": "Operating System",
    "type": "group",
    "value": "operating-system-filter",
  },
  Array [],
  Array [],
  [Function],
]
`;

exports[`useOperatingSystemFilter with operating systems loaded should return correct chips array, current value and value setter 1`] = `
Array [
  Object {
    "category": "Operating System",
    "chips": Array [
      Object {
        "name": "RHEL 8.4",
        "value": "8.4",
      },
    ],
    "type": "operating_system",
  },
]
`;

exports[`useOperatingSystemFilter with operating systems loaded should return empty state value if no versions obtained 1`] = `
Array [
  Object {
    "filterValues": Object {
      "groups": Array [
        Object {
          "items": Array [
            Object {
              "label": "No versions available",
            },
          ],
        },
      ],
      "onChange": [Function],
      "selected": Object {},
    },
    "label": "Operating System",
    "type": "group",
    "value": "operating-system-filter",
  },
  Array [],
  Array [],
  [Function],
]
`;

exports[`useOperatingSystemFilter with operating systems yet not loaded should return empty state value 1`] = `
Array [
  Object {
    "filterValues": Object {
      "groups": Array [
        Object {
          "items": Array [
            Object {
              "label": "No versions available",
            },
          ],
        },
      ],
      "onChange": [Function],
      "selected": Object {},
    },
    "label": "Operating System",
    "type": "group",
    "value": "operating-system-filter",
  },
  Array [],
  Array [],
  [Function],
]
`;
